fix:將switch name移至.env進行設定

--- a/ip_mac_port.ipynb
+++ b/ip_mac_port.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "77e181d7",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
     "    \"secret\":os.getenv('L3_ENABLE_PWD'),\n",
     "    \"session_log\": \"netmiko_session.log\",\n",
     "}\n",
-    "exp_str = r\"EE_2F_Core_7250-48#\"\n",
+    "exp_str = os.getenv('L3_SWITCH_NAME')+\"#\"\n",
     "\n",
     "with ConnectHandler(**dev) as conn: # dev裡的東西當參數call ConnectHandler，開啟連線\n",
     "    conn.enable()\n",
